# PointMouse

./: .gitignore  README.md  collect_training_data.py  hand_tracking.py  hand_tracking_ml.py  hand_tracking_sk.py  pyproject.toml  right_hand_landmarks_labeled_202410121123.csv  train_click_classifier.py
experiments/: generate_new_experiment.py
experiments/2024-10-15_18-53-16/: README.md
experiments/2024-10-15_18-53-16/pointmouse/: collect_training_data.py  hand_tracking_sk.py  train_click_classifier.py
experiments/2024-10-16_09-50-00/: README.md
experiments/2024-10-16_09-50-00/pointmouse/: collect_training_data.py  hand_tracking_sk.py  train_click_classifier.py
pointmouse/: collect_training_data.py  hand_tracking.py  hand_tracking_sk.py  train_click_classifier.py
